objects/User.object
<CustomObject>
    <fields>
        <fullName>User_Country__c</fullName>
        <description>C&amp;E field</description>
        <inlineHelpText>The users main working country area - picklist values for Accounts &amp; Contacts will default to this.</inlineHelpText>
        <label>User Country</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <externalId>true</externalId>
        <label>User ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccpe_r__Cost__c</fullName>
        <description>The Cost of the User</description>
        <label>Cost ($/hour)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Rate__c</fullName>
        <description>This is the standard hourly rate of the User</description>
        <inlineHelpText>This is the standard hourly rate of the User</inlineHelpText>
        <label>Rate ($/hour)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Version__c</fullName>
        <label>Pardot Api Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Allocatable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the user can have their time allocated to a project. Also used by the SchedulableCreateBlankTimesheets class to identify users who need a Timesheet created for them each week
(Cloud Coach 19-OCT-10)</description>
        <label>Allocatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Sorting_Hash__c</fullName>
        <description>This field is a concatenation of the First Name + Last Name + Username to create a sortable key that can find the next alphabetical user. This is currently only used by the Capabilities Tab</description>
        <formula>LastName &amp; FirstName &amp; Username</formula>
        <label>Last, First &amp; User Name</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>BMCServiceDesk__Validate_FootPrints_Login</fullName>
        <active>false</active>
        <description>Enable this validation rule to prevent users from editing the BMC Client Management Login ID. However, the users can delete the BMC Client Management Login ID.</description>
        <errorConditionFormula>IF(NOT(ISCHANGED(BMCServiceDesk__FPLoginID__c) ), false, IF(ISBLANK( BMCServiceDesk__FPLoginID__c), false, IF(BMCServiceDesk__FP_Login_Validated__c,false, true)))</errorConditionFormula>
        <errorMessage>You can delete a BMC Client Management Login ID from here but you cannot edit it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_not_allow_Business_Org_change</fullName>
        <active>true</active>
        <description>Changing business org on a user will cause significant data access issues due to inherited sharing. Correct process dictates that the user is marked inactive and a new user in the proper org is corrected.</description>
        <errorConditionFormula>And(
Ischanged(Business_Org__c),
NOT(ISPICKVAL(PRIORVALUE(Business_Org__c ), &quot;&quot;)),
NOT(ISPICKVAL(PRIORVALUE(Business_Org__c ), &quot;Danfoss&quot;))
)</errorConditionFormula>
        <errorDisplayField>Business_Org__c</errorDisplayField>
        <errorMessage>Changing business org on a user will cause significant data access issues due to inherited sharing. Please follow the appropriate process by inactivating the current user and creating a new user in the correct business org.</errorMessage>
    </validationRules>
</CustomObject>